[package]
name = "matchmaking"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
futures-util = "0.3"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version= "0.3.19", features = ["env-filter"]}
reqwest = {version = "0.12.23", features = ["json"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
